--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
             "username": "root",
             "password": "Subaby1124"
         }
-    ]
+    ],
+    "git.ignoreLimitWarning": true
 }
